# cw-ip-215_quizrunner

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  QuizGame  README.md
.github/workflows/: build.yml
docs/: tech-requirement.md
files/: expected_output.txt  my_quiz.txt  test_questions.txt  testcreate.txt  topic1.txt  topic2.txt  topic3.txt
src/: QuizRunner.c  main.cpp  quiz.c  quiz.cpp  quiz.h  quiz.h.gch
src/project/: QuizRunner.c
src/project_lib/: quiz.c  quiz.h
test-file/: ctestlib.c  ctestlib.h  test
test-file/test_lib/: .clang-format  ctestlib.c  ctestlib.h
test-file/test_project/: ctest.c
test/tests/: test.c
